# Travel-Mate-FYP-

./: .gitignore  README.md
backend/: .gitignore  README.md  __init__.py  alembic.ini  config.py  main.py  pyproject.toml  requirements.txt  travelmate.session.sql
backend/controller/: 12-22-rag.py  __init__.py  custom_exception.py  database.py  deps.py  final_df.csv  new_rag.py  old_rag.py  rag.py  rag2.py  rag3.py  utill.py
backend/migrations/versions/: 07e58db02c8e_added_user_session_table.py  7170c777ba32_update_sessio_table.py  b79152e895b9_update_relation.py  c75f2d8abc29_added_messages_table.py
backend/models/: __init__.py  chat.py  chat_session.py  user.py
backend/routes/: 12-22-chat_route.py  12-22-user_route.py  OLD_chat_route.py  __init__.py  chat_route.py  session_route.py  user_route.py
backend/schema/: __init__.py  chat.py  userSchema.py
frontend/: .env  package-lock.json  package.json  tailwind.config.js
frontend/public/: index.html
frontend/src/: App.jsx  index.css
frontend/src/components/: ChatSidebar.jsx  ChatWindow.jsx  InputField.jsx  LocationCard.jsx  ThinkingAnimation.jsx
frontend/src/pages/: Chat.jsx  ForgotPassword.jsx  GuestLogin.jsx  Login.jsx  Register.jsx  UpdateProfile.jsx
frontend/src/store/: authStore.js
postman_collection/: Travel Mate.postman_collection.json
